# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(epoll server, 1.0,codingwangfeng@126.com)
AC_CONFIG_SRCDIR([common.mk])
AC_CONFIG_AUX_DIR(_aux)
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_HEADER([config-dummy.h])
AC_PREFIX_DEFAULT(/usr/local/)
AC_CANONICAL_HOST
AC_LANG(C++)
AC_PROG_CC
AC_PROG_CXX
PKG_PROG_PKG_CONFIG
AC_DISABLE_STATIC
AC_PROG_LIBTOOL
AC_CHECK_HEADERS([iostream])

AC_C_CONST
AK_STD_FEATURES
AC_CACHE_SAVE
AC_CONFIG_FILES([
	Makefile
])
AC_OUTPUT
AK_PATCH_LIBTOOL

